# hermes-harness

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
evals/benchmarks/coding/: humaneval.py  mbpp.py
evals/runners/: eval_cli.py
tests/: conftest.py
tests/e2e/: test_scenarios.py
tests/integration/: test_collaboration.py
tests/unit/: test_agent_loop.py  test_tools.py
